# food-data-benchmark

./: .gitignore  01_build_datasets.ipynb  02_benchmark.ipynb  03_analysis.ipynb  04_db_grounded.py  README.md  pyproject.toml
data/: benchmark.json
data/results/: claude-haiku-4.5.json  claude-sonnet-4.6.json  db-grounded-claude-haiku-4.5.json  db-grounded-claude-sonnet-4.6.json  db-grounded-gemini-3.5-flash.json  db-grounded-gemma-4-31b.json  db-grounded-oracle.json  db-grounded-qwen3-235b-a22b-2507.json  estimate-claude-haiku-4.5.json  estimate-claude-sonnet-4.6.json  estimate-gemini-3.5-flash.json  estimate-gemma-4-31b.json  estimate-qwen3-235b-a22b-2507.json  gemini-3-flash-preview.json  qwen3-235b-a22b-2507.json
