[project]
name = "food-benchmarks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.4.2",
    "openai>=2.26.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "tabulate>=0.10.0",
    "tqdm>=4.67.3",
]
